--- a/NDSComicBookConverterConsole.csproj
+++ b/NDSComicBookConverterConsole.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="SharpCompress" Version="0.37.2" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.4" />
   </ItemGroup>
 
 </Project>
